[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-util"
version = "0.1.0"
description = "Python utility to git add, commit with conventional commit messages, and push to remote with semantic versioning tags"
authors = [
    {name = "Gaurav Singh", email = "gauravsingh089@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.scripts]
git-util = "git_util.cli:main"

[project.urls]
Homepage = "https://github.com/gauravsingh089/git-util"
Repository = "https://github.com/gauravsingh089/git-util"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_util*"]
exclude = ["tests*"]
